--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -5,9 +5,9 @@ platform="Windows Desktop"
 runnable=true
 custom_features=""
 export_filter="all_resources"
-include_filter=""
+include_filter="assets/*, *.wav"
 exclude_filter=""
-export_path="build/LD50.exe"
+export_path="build/NapGuardian.exe"
 script_export_mode=1
 script_encryption_key=""
 
@@ -46,9 +46,9 @@ platform="Linux/X11"
 runnable=true
 custom_features=""
 export_filter="all_resources"
-include_filter=""
+include_filter="assets/*, *.wav"
 exclude_filter=""
-export_path=""
+export_path="build/NapGuardian.x86_64"
 script_export_mode=1
 script_encryption_key=""
 
@@ -71,9 +71,9 @@ platform="HTML5"
 runnable=true
 custom_features=""
 export_filter="all_resources"
-include_filter=""
+include_filter="assets/*, *.wav"
 exclude_filter=""
-export_path=""
+export_path="build/index.html"
 script_export_mode=1
 script_encryption_key=""
 
